_generated-doc/2.16/config/quarkus-arc.adoc

:summaryTableId: quarkus-arc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-arc_configuration]]link:#quarkus-arc_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.remove-unused-beans]]`link:#quarkus-arc_quarkus.arc.remove-unused-beans[quarkus.arc.remove-unused-beans]`

[.description]
--
- If set to `all` (or `true`) the container will attempt to remove all unused beans. 
 - If set to `none` (or `false`) no beans will ever be removed even if they are unused (according to the criteria set out below) 
 - If set to `fwk`, then all unused beans will be removed, except the unused beans whose classes are declared in the application code  
An unused bean:  
 - is not a built-in bean or interceptor, 
 - is not eligible for injection to any injection point, 
 - is not excluded by any extension, 
 - does not have a name, 
 - does not declare an observer, 
 - does not declare any producer which is eligible for injection to any injection point, 
 - is not directly eligible for injection into any `javax.enterprise.inject.Instance` injection point

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_REMOVE_UNUSED_BEANS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_REMOVE_UNUSED_BEANS+++`
endif::add-copy-button-to-env-var[]
--|string 
|`all`


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.auto-inject-fields]]`link:#quarkus-arc_quarkus.arc.auto-inject-fields[quarkus.arc.auto-inject-fields]`

[.description]
--
If set to true `@Inject` is automatically added to all non-static non-final fields that are annotated with one of the annotations defined by `AutoInjectAnnotationBuildItem`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_AUTO_INJECT_FIELDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_AUTO_INJECT_FIELDS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.transform-unproxyable-classes]]`link:#quarkus-arc_quarkus.arc.transform-unproxyable-classes[quarkus.arc.transform-unproxyable-classes]`

[.description]
--
If set to true, the bytecode of unproxyable beans will be transformed. This ensures that a proxy/subclass can be created properly. If the value is set to false, then an exception is thrown at build time indicating that a subclass/proxy could not be created. Quarkus performs the following transformations when this setting is enabled:  
 - Remove 'final' modifier from classes and methods when a proxy is required. 
 - Create a no-args constructor if needed. 
 - Makes private no-args constructors package-private if necessary.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_TRANSFORM_UNPROXYABLE_CLASSES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_TRANSFORM_UNPROXYABLE_CLASSES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.fail-on-intercepted-private-method]]`link:#quarkus-arc_quarkus.arc.fail-on-intercepted-private-method[quarkus.arc.fail-on-intercepted-private-method]`

[.description]
--
If set to true, the build fails if a private method that is neither an observer nor a producer, is annotated with an interceptor binding. An example of this is the use of `Transactional` on a private method of a bean. If set to false, Quarkus simply logs a warning that the annotation will be ignored.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_FAIL_ON_INTERCEPTED_PRIVATE_METHOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_FAIL_ON_INTERCEPTED_PRIVATE_METHOD+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.selected-alternatives]]`link:#quarkus-arc_quarkus.arc.selected-alternatives[quarkus.arc.selected-alternatives]`

[.description]
--
The list of selected alternatives for an application. 
An element value can be:  
 - a fully qualified class name, i.e. `org.acme.Foo` 
 - a simple class name as defined by `Class++#++getSimpleName()`, i.e. `Foo` 
 - a package name with suffix `.++*++`, i.e. `org.acme.++*++`, matches a package 
 - a package name with suffix `.++**++`, i.e. `org.acme.++**++`, matches a package that starts with the value  Each element value is used to match an alternative bean class, an alternative stereotype annotation type or a bean class that declares an alternative producer. If any value matches then the priority of `Integer++#++MAX_VALUE` is used for the relevant bean. The priority declared via `javax.annotation.Priority` or `io.quarkus.arc.AlternativePriority` is overridden.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_SELECTED_ALTERNATIVES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_SELECTED_ALTERNATIVES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.auto-producer-methods]]`link:#quarkus-arc_quarkus.arc.auto-producer-methods[quarkus.arc.auto-producer-methods]`

[.description]
--
If set to true then `javax.enterprise.inject.Produces` is automatically added to all non-void methods that are annotated with a scope annotation, a stereotype or a qualifier, and are not annotated with `Inject` or `Produces`, and no parameter is annotated with `Disposes`, `Observes` or `ObservesAsync`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_AUTO_PRODUCER_METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_AUTO_PRODUCER_METHODS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.exclude-types]]`link:#quarkus-arc_quarkus.arc.exclude-types[quarkus.arc.exclude-types]`

[.description]
--
The list of types that should be excluded from discovery. 
An element value can be:  
 - a fully qualified class name, i.e. `org.acme.Foo` 
 - a simple class name as defined by `Class++#++getSimpleName()`, i.e. `Foo` 
 - a package name with suffix `.++*++`, i.e. `org.acme.++*++`, matches a package 
 - a package name with suffix `.++**++`, i.e. `org.acme.++**++`, matches a package that starts with the value  If any element value matches a discovered type then the type is excluded from discovery, i.e. no beans and observer methods are created from this type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_EXCLUDE_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_EXCLUDE_TYPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.unremovable-types]]`link:#quarkus-arc_quarkus.arc.unremovable-types[quarkus.arc.unremovable-types]`

[.description]
--
List of types that should be considered unremovable regardless of whether they are directly used or not. This is a configuration option equivalent to using `io.quarkus.arc.Unremovable` annotation. 
An element value can be:  
 - a fully qualified class name, i.e. `org.acme.Foo` 
 - a simple class name as defined by `Class++#++getSimpleName()`, i.e. `Foo` 
 - a package name with suffix `.++*++`, i.e. `org.acme.++*++`, matches a package 
 - a package name with suffix `.++**++`, i.e. `org.acme.++**++`, matches a package that starts with the value  If any element value matches a discovered bean, then such a bean is considered unremovable.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_UNREMOVABLE_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_UNREMOVABLE_TYPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.detect-unused-false-positives]]`link:#quarkus-arc_quarkus.arc.detect-unused-false-positives[quarkus.arc.detect-unused-false-positives]`

[.description]
--
If set to true then the container attempts to detect "unused removed beans" false positives during programmatic lookup at runtime. You can disable this feature to conserve some memory when running your application in production.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_DETECT_UNUSED_FALSE_POSITIVES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_DETECT_UNUSED_FALSE_POSITIVES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.detect-wrong-annotations]]`link:#quarkus-arc_quarkus.arc.detect-wrong-annotations[quarkus.arc.detect-wrong-annotations]`

[.description]
--
If set to true then the container attempts to detect _wrong_ usages of annotations and eventually fails the build to prevent unexpected behavior of a Quarkus application. 
A typical example is `@javax.ejb.Singleton` which is often confused with `@javax.inject.Singleton`. As a result a component annotated with `@javax.ejb.Singleton` would be completely ignored. Another example is an inner class annotated with a scope annotation - this component would be again completely ignored.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_DETECT_WRONG_ANNOTATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_DETECT_WRONG_ANNOTATIONS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.dev-mode.monitoring-enabled]]`link:#quarkus-arc_quarkus.arc.dev-mode.monitoring-enabled[quarkus.arc.dev-mode.monitoring-enabled]`

[.description]
--
If set to true then the container monitors business method invocations and fired events during the development mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_DEV_MODE_MONITORING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_DEV_MODE_MONITORING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.test.disable-application-lifecycle-observers]]`link:#quarkus-arc_quarkus.arc.test.disable-application-lifecycle-observers[quarkus.arc.test.disable-application-lifecycle-observers]`

[.description]
--
If set to true then disable `StartupEvent` and `ShutdownEvent` observers declared on application bean classes during the tests.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_TEST_DISABLE_APPLICATION_LIFECYCLE_OBSERVERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_TEST_DISABLE_APPLICATION_LIFECYCLE_OBSERVERS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.ignored-split-packages]]`link:#quarkus-arc_quarkus.arc.ignored-split-packages[quarkus.arc.ignored-split-packages]`

[.description]
--
The list of packages that will not be checked for split package issues. 
A package string representation can be:  
 - a full name of the package, i.e. `org.acme.foo` 
 - a package name with suffix `.++*++`, i.e. `org.acme.++*++`, which matches a package that starts with provided value

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_IGNORED_SPLIT_PACKAGES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_IGNORED_SPLIT_PACKAGES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.context-propagation.enabled]]`link:#quarkus-arc_quarkus.arc.context-propagation.enabled[quarkus.arc.context-propagation.enabled]`

[.description]
--
If set to true and SmallRye Context Propagation extension is present then enable the context propagation for CDI contexts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_CONTEXT_PROPAGATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_CONTEXT_PROPAGATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


h|[[quarkus-arc_quarkus.arc.exclude-dependency-artifacts-that-should-be-excluded-from-discovery]]link:#quarkus-arc_quarkus.arc.exclude-dependency-artifacts-that-should-be-excluded-from-discovery[Artifacts that should be excluded from discovery]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.exclude-dependency.-dependency-name-.group-id]]`link:#quarkus-arc_quarkus.arc.exclude-dependency.-dependency-name-.group-id[quarkus.arc.exclude-dependency."dependency-name".group-id]`

[.description]
--
The maven groupId of the artifact.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__GROUP_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__GROUP_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.exclude-dependency.-dependency-name-.artifact-id]]`link:#quarkus-arc_quarkus.arc.exclude-dependency.-dependency-name-.artifact-id[quarkus.arc.exclude-dependency."dependency-name".artifact-id]`

[.description]
--
The maven artifactId of the artifact.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__ARTIFACT_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__ARTIFACT_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-arc_quarkus.arc.exclude-dependency.-dependency-name-.classifier]]`link:#quarkus-arc_quarkus.arc.exclude-dependency.-dependency-name-.classifier[quarkus.arc.exclude-dependency."dependency-name".classifier]`

[.description]
--
The maven classifier of the artifact.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__CLASSIFIER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__CLASSIFIER+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===